fix social icons centered on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -1386,6 +1386,10 @@ hr {
       }
     }
     
+    .social-icons {
+      justify-content: center;
+    }
+
     .links-container {
       width: 90%;
       gap: 1rem;
